
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {scalar_t__ st_blocks; } ;
struct FTW {int dummy; } ;


 int FTW_D ;
 int FTW_F ;
 int ent_blocks ;
 int num_files ;

__attribute__((used)) static int sum_bsizes(const char *fpath, const struct stat *sb, int typeflag, struct FTW *ftwbuf)
{
 (void) fpath;
 (void) ftwbuf;

 if (sb->st_blocks && (typeflag == FTW_F || typeflag == FTW_D))
  ent_blocks += sb->st_blocks;

 ++num_files;
 return 0;
}
