; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_sum_bsizes.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_sum_bsizes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }
%struct.FTW = type { i32 }

@FTW_F = common dso_local global i32 0, align 4
@FTW_D = common dso_local global i32 0, align 4
@ent_blocks = common dso_local global i32 0, align 4
@num_files = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.stat*, i32, %struct.FTW*)* @sum_bsizes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sum_bsizes(i8* %0, %struct.stat* %1, i32 %2, %struct.FTW* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.stat*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.FTW*, align 8
  store i8* %0, i8** %5, align 8
  store %struct.stat* %1, %struct.stat** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.FTW* %3, %struct.FTW** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load %struct.FTW*, %struct.FTW** %8, align 8
  %11 = load %struct.stat*, %struct.stat** %6, align 8
  %12 = getelementptr inbounds %struct.stat, %struct.stat* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %31

15:                                               ; preds = %4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @FTW_F, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @FTW_D, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %31

23:                                               ; preds = %19, %15
  %24 = load %struct.stat*, %struct.stat** %6, align 8
  %25 = getelementptr inbounds %struct.stat, %struct.stat* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i32, i32* @ent_blocks, align 4
  %28 = sext i32 %27 to i64
  %29 = add nsw i64 %28, %26
  %30 = trunc i64 %29 to i32
  store i32 %30, i32* @ent_blocks, align 4
  br label %31

31:                                               ; preds = %23, %19, %4
  %32 = load i32, i32* @num_files, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* @num_files, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
